# OpenGl_Room

./: pyproject.toml
graphics-master/lab3/: houses.py
graphics-master/lab5/: lab5.py
graphics-master/rgr1/: MyRgr.py
graphics/lab1-2/: lab1-2.py
graphics/lab3/: houses.py  solar_system.py
graphics/lab4/: lab4.py
graphics/lab5/: lab5.py
graphics/lab6/: lab6.py  lab6_1.py
graphics/rgr1/: MyRgr_Finish.py  rgr.docx
