[tool.poetry]
name = "opengl-lab"
version = "0.1.0"
description = "laboratory"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
glfw = "^1.8"
numpy = "^1.17"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
